# ConsoleTaskManager

./: CMakeLists.txt  Command.cpp  Command.h  CommandBuilder.cpp  CommandBuilder.h  InputHandler.cpp  InputHandler.h  LogicalJudment.h  Readme.txt  Readme_ШишкинРБ_текст_комманд_для_тестирования.txt  Task.cpp  Task.h  TaskContainer.cpp  TaskContainer.h  TaskLE.cpp  TaskLE.h  TaskScanner.cpp  TaskScanner.h  Validator.cpp  Validator.h  main.cpp  tasklist.csv
